--- a/01-first-one-azure-pipelines.yml
+++ b/01-first-one-azure-pipelines.yml
@@ -8,13 +8,20 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
+#pipelines >stages > jobs > Task(steps)
 
-steps:
-- script: echo Hello, world! changed !
-  displayName: 'Run a one-line script'
+jobs:
+- job: job1
+  steps: 
+  - script: echo job 1 Hello, world! changed !
+    displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-    echo more information
-  displayName: 'Run a multi-line script'
+  - script:  
+      echo Add other tasks to build, test, and deploy your project.
+      echo See https://aka.ms/yaml
+      echo more information
+    displayName: 'Run a multi-line script'
+- job: job2
+  steps: 
+  - script: echo job 2
+    displayName: 'Run a one-line script'
