--- a/01-first-one-azure-pipelines.yml
+++ b/01-first-one-azure-pipelines.yml
@@ -22,6 +22,12 @@ jobs:
       echo more information
     displayName: 'Run a multi-line script'
 - job: job2
+  dependsOn: job1
   steps: 
   - script: echo job 2
+    displayName: 'Run a one-line script'
+- job: job3
+  dependsOn: job2
+  steps: 
+  - script: echo job 3
     displayName: 'Run a one-line script'
