--- a/01-first-one-azure-pipelines.yml
+++ b/01-first-one-azure-pipelines.yml
@@ -31,3 +31,10 @@ jobs:
   steps: 
   - script: echo job 3
     displayName: 'Run a one-line script'
+- job: job4
+  dependsOn: 
+  - job2
+  - job3
+  steps: 
+  - script: echo job 4
+    displayName: 'Run a one-line script'
