--- a/02-understanding-images-yml.yml
+++ b/02-understanding-images-yml.yml
@@ -15,28 +15,35 @@ stages:
   - job: BuildDeployjob
     steps:
     - bash: echo Build FirstJob
+    - bash: echo $(PipelineLevelVariable) 
   - job: SecondJob
     steps:
     - bash: echo Build SecondJob
 - stage: Devdeploy
+  variables:
+    environment: Dev 
   dependsOn: build
   jobs:
   - job: Devdeployjob
     steps:
-    - bash: echo DevDeployjob
+    - bash: echo $(environment)Deployjob
 - stage: QAdeploy
+  variables:
+    environment: QAdeploy
   dependsOn: build
   jobs:
   - job: QADeploy
     steps:
-    - bash: echo DevDeployjob
+    - bash: echo $(environment)Deployjob
 - stage: Proddeploy
+  variables:
+    environment: Proddeploy
   dependsOn: 
    - Devdeploy
    - QAdeploy
   jobs:
   - job: ProdDeploy
     steps:
-    - bash: echo ProdDeployjob
+    - bash: echo $(environment)Deployjob
 
 
