--- a/02-understanding-images-yml.yml
+++ b/02-understanding-images-yml.yml
@@ -37,6 +37,11 @@ stages:
           **/*tf
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
     - bash: ls -R $(Build.ArtifactStagingDirectory)
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
   # - job: SecondJob
   #   steps:
   #   - bash: echo Build SecondJob
